kubernetes/reddit-app/mongo_deployment.yml
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: mongo-deployment
  labels:
    app: reddit
    component: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reddit
      component: mongo
  template:
    metadata:
      name: mongo
      labels:
        app: reddit
        component: mongo
    spec:
      containers:
      - image: mongo:3.2
        name: mongo
        volumeMounts:
          - name: mongo-persistent-storage
            mountPath: /data/db
      volumes:
        - name: mongo-persistent-storage
          # gcePersistentDisk:
          #   pdName: reddit-mongo-disk
          #   fsType: ext4
          persistentVolumeClaim:
            claimName: mongo-pvc
