kubernetes/reddit-app/ui_deployment.yml
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: ui-deployment
  labels:
    app: reddit
    component: ui
spec:
  replicas: 3
  selector:
    matchLabels:
      app: reddit
      component: ui
  template:
    metadata:
      name: ui
      labels:
        app: reddit
        component: ui
    spec:
      containers:
      - image: alxbird/ui
        name: ui
